--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,7 +31,7 @@ spring:
     # 发送者邮箱
     username: 3244745586@qq.com
     # 配置密码，注意不是真正的密码，而是刚刚申请到的授权码
-    password: vvkemynowuphchdf
+    password: 授权码
     # 端口号465或587
     port: 587
     # 默认的邮件编码为UTF-8
